<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NetDashboard</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world" tools:keep="@string/hello_world">Hello Square World!</string>

    <!-- Preference Titles -->
    <string name="messages_header" tools:keep="@string/messages_header">Messages</string>
    <string name="sync_header" tools:keep="@string/sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" tools:keep="@string/signature_title">Your signature</string>
    <string name="reply_title" tools:keep="@string/reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" tools:keep="@string/sync_title">Sync email periodically</string>
    <string name="attachment_title" tools:keep="@string/attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on" tools:keep="@string/attachment_summary_on">Automatically download attachments for incoming emails \n</string>
    <string name="attachment_summary_off" tools:keep="@string/attachment_summary_off">Only download attachments when manually requested</string>

    <string name="snackbar_confirmation">Are you sure? Wait to dismiss.</string>

    <string name="d_edit">Click to edit.</string>
    <string name="d_swap">Mark to swap.</string>
    <string name="d_remove">Mark, click again.</string>
    <string name="d_empty">Add new tiles first. \n Use left icon to access edit mode.</string>
    <string name="d_failed">FAILED TO CONNECT</string>
    <string name="d_attempting">ATTEMPTING TO CONNECT</string>
    <string name="d_disconnected">DISCONNECTED</string>
    <string name="d_connected">CONNECTED</string>

    <string name="p_banner">Properties</string>
    <string name="p_span">Row span: </string>
    <string name="p_switch">Enabled:</string>
    <string name="p_mqtt_address">Address:</string>
    <string name="p_publish_value_hint">empty</string>
    <string name="p_port">Port:</string>
    <string name="p_communication">Communication:</string>
    <string name="p_mqtt">MQTT</string>

    <string name="tp_dimensions">Dimensions</string>
    <string name="tp_dimensions_info">You can control only one dimension.</string>
    <string name="tp_design">Design</string>
    <string name="tp_design_info_theme">Colour tile according to dashboard\'s theme. \nCheck properties to change it.</string>
    <string name="tp_publish_topic">Publish topic:</string>
    <string name="tp_subscribe_topic">Subscribe topic:</string>
    <string name="tp_banner0">Tile properties</string>
    <string name="tp_banner1">type:</string>
    <string name="tp_slider_height">Height:</string>
    <string name="tp_slider_width">Width:</string>
    <string name="tp_design_chip0">colour by theme</string>
    <string name="tp_design_chip1">specify color</string>
    <string name="tp_design_hue">Hue:</string>
    <string name="tp_design_saturation">Saturation:</string>
    <string name="tp_design_value">Value:</string>
    <string name="tp_publish_value">Publish value:</string>
    <string name="tp_topic_hint">disabled</string>
    <string name="tb_default_text" tools:keep="@string/tile_button_default_text">Default value</string>
    <string name="tp_json_switch">Payload is JSON:</string>
    <string name="tp_conf_switch">Confirm publishing:</string>
    <string name="p_mqtt_failed">Failed:</string>
    <string name="p_mqtt_attempting">Attempting:</string>
    <string name="p_mqtt_connected">Connected:</string>
    <string name="t_mqtt_status_info">Server attempts to connect every 3 seconds.</string>
    <string name="tp_tile_specific">Type specific:</string>
    <string name="p_tag">tag:</string>
</resources>