<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp">

    <View
        android:id="@+id/ripple_foreground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <View
        android:id="@+id/foreground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/iicp_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:tag="colorB"
                android:text="@string/tp_design_hue"
                android:textColor="@color/gray100"
                android:textSize="12dp" />

            <com.google.android.material.slider.Slider
                android:id="@+id/iicp_hue"
                style="@style/slider"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginVertical="15dp"
                android:tag="enabled"
                android:value="180"
                android:valueFrom="0"
                android:valueTo="360" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:tag="colorB"
                android:text="@string/tp_design_saturation"
                android:textColor="@color/gray100"
                android:textSize="12dp" />

            <com.google.android.material.slider.Slider
                android:id="@+id/iicp_saturation"
                style="@style/slider"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginVertical="15dp"
                android:tag="enabled"
                android:value="0.01"
                android:valueFrom="0"
                android:valueTo="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/iicp_val_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:tag="colorB"
                android:text="@string/tp_design_value"
                android:textColor="@color/gray100"
                android:textSize="12dp" />

            <com.google.android.material.slider.Slider
                android:id="@+id/iicp_value"
                style="@style/slider"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginVertical="15dp"
                android:tag="enabled"
                android:value="0.01"
                android:valueFrom="0"
                android:valueTo="1" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>